# inspect-commits

./: Cargo.toml  README.md  build  build.rs  config.json  validate-git-push
.github/workflows/: release.yml
hooks/: pre-push
release/: inspect-commits  validate-git-push
scripts/: build  install  link  uninstall
src/: check.rs  cli.rs  config.rs  hook.rs  main.rs  utils.rs
