[package]
name = "validate-git-push"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
serde_json = "1.0.68"
serde = {version = "1.0.130", features = ["derive"]}
colored = "2"
clap = "2.34.0"
indicatif = "0.16.2"

[dev-dependencies]
tokio-test = "*"

