[package]
name = "inspect-commits"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde_json = "1.0.68"
serde = {version = "1.0.130", features = ["derive"]}
colored = "2"
clap = "2.34.0"

