[package]
name = "inspect-commits"
version = "0.0.2"
edition = "2021"

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
regex = "1"
serde_json = "1.0.68"
serde = {version = "1.0.130", features = ["derive"]}
colored = "2"
clap = "3.1.18"

[build-dependencies]
clap = "3.1.18"
clap_complete = "3.1.4"

